--- a/Covid19.ipynb
+++ b/Covid19.ipynb
@@ -824,6 +824,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imageio.mimsave?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 170,
    "metadata": {},
    "outputs": [],
@@ -831,7 +840,7 @@
     "import imageio\n",
     "images = []\n",
     "filenames = ['CovidIndiaAnalysis_Source_covid19india_org'+str(di)+'.jpeg' for di in range(len(all_days))]\n",
-    "for filename in filenames:\n",
+    "for filename in filenames[::-1]:\n",
     "    images.append(imageio.imread(filename))\n",
     "imageio.mimsave('covid.gif', images)"
    ]
