--- a/Covid19.ipynb
+++ b/Covid19.ipynb
@@ -824,16 +824,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imageio.mimsave?"
+    "from PIL import Image\n",
+    "im = Image.open('covid.gif')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +843,7 @@
     "filenames = ['CovidIndiaAnalysis_Source_covid19india_org'+str(di)+'.jpeg' for di in range(len(all_days))]\n",
     "for filename in filenames[::-1]:\n",
     "    images.append(imageio.imread(filename))\n",
-    "imageio.mimsave('covid.gif', images)"
+    "imageio.mimsave('covid.gif', images,fps=3)"
    ]
   },
   {
